# librarian

./: .ai_config.yml  .aiignore  .env.dev  .env.example  .gitignore  DEBUGGING_LOG.md  Dockerfile  PROJECT_BLUEPRINT.md  README.md  TECHNICAL_DEBT.md  create_index.py  docker-compose.yml  hello.md  pyproject.toml  requirements.txt
.github/workflows/: smart-indexing.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: context.py  health.py
app/core/: config.py  dependencies.py  index_manager.py  limiter.py
app/models/: schemas.py
healthcheck/: check.py
