
[project]
name = "librarian"
version = "1.0.0"
description = "A centralized RAG service for retrieving codebase context."
dependencies = [
    "chromadb==0.4.24",
    "fastapi==0.110.0",
    "oci==2.123.0",
    "orjson==3.10.3",
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "psutil==5.9.8",
    "redis==5.0.1",
    "slowapi==0.1.9",
    "sentence-transformers==2.7.0",
    "torch==2.3.0",
    "uvloop==0.19.0", 
    "uvicorn[standard]==0.27.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"