
[project]
name = "librarian"
version = "1.0.0"
description = "A centralized RAG service for retrieving codebase context."
dependencies = [
    "chromadb==1.0.20",
    "fastapi==0.116.1",
    "oci==2.123.0",
    "orjson==3.10.18",
    "pydantic==2.8.0",
    "pydantic-settings==2.3.0",
    "psutil==7.0.0",
    "redis==5.0.4",
    "slowapi==0.1.9",
    "sentence-transformers==5.1.0",
    "uvloop==0.21.0", 
    "uvicorn[standard]==0.27.1",
     "onnxruntime==1.18.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"